# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"


[tool.poetry.dependencies]
python = "^3.10"
ops = "^3.3.1"
data-platform-helpers = "^0.1.7"
pydantic = "^2.12.4"
Jinja2 = "^3.1.6"
tenacity = "^9.1.2"


[tool.poetry.group.format]
optional = true


[tool.poetry.group.format.dependencies]
ruff = "^0.14.6"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.6"
codespell = "^2.4.1"
mypy = "^1.18.2"

[tool.poetry.group.unit.dependencies]
coverage = { extras = ["toml"], version = "^7.12.0" }
pytest = "^8.4.2"
pytest-asyncio = "*"
ops = { version = ">=2.23.1", extras = ["testing"] }

[tool.poetry.group.integration.dependencies]
pytest = "^8.4.2"
jubilant = "^1.5.0"
requests = "^2.32.5"
allure-pytest = "^2.15.0"
allure-pytest-default-results = "^0.1.3"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["unstable"]


[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "E999"], "src/*/__init__.py" = ["D104"] }
mccabe.max-complexity = 10


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
exclude = [
  "lib",
]
follow_imports = "silent"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "charms.data_platform_libs.*",
  "data_platform_helpers.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
extraPaths = ["./lib", "src"]
pythonVersion = "3.10"
pythonPlatform = "All"


